; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_get_iu64.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_get_iu64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @get_iu64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_iu64(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %7, align 4
  store i8* null, i8** %8, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = call i8* @tcadbget(i8* %13, i32* %5, i32 4, i32* %6)
  store i8* %14, i8** %8, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %23

16:                                               ; preds = %12
  %17 = load i8*, i8** %8, align 8
  %18 = bitcast i8* %17 to i32*
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %7, align 4
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @free(i8* %20)
  %22 = load i32, i32* %7, align 4
  store i32 %22, i32* %3, align 4
  br label %24

23:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %16, %11
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i8* @tcadbget(i8*, i32*, i32, i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
